# spo_lab_3-2

./: CMakeLists.txt  client.c  generate.c  json_api.c  json_api.h  ql.lex  ql.y  server.c  storage.c  storage.h  test-data
cmake/: FindBison.cmake  FindFlex.cmake
